--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ source:
   # build; see <https://github.com/conda-forge/xgboost-feedstock/issues/22>
   git_url: https://github.com/moble/{{ name }}.git
   git_rev: {{ version }}
-  # Mitigate the above by just cloning the minimum depth
-  git_depth: 1
+  # Mitigate the above by just shallow cloning, while still capturing the tag
+  git_depth: 10
 
 build:
   number: 2
